--- a/src/panels/home.html
+++ b/src/panels/home.html
@@ -11,15 +11,13 @@
             </div>
         </div>
     </div>
-
-    <img class="superlogo" src="assets/images/launcher.png">
-
+    
     <div class="body-home">
         <div class="news-list"></div>
         <div class="info-list">
             <div class="info-item">
                 <div class="server">
-                    <img class="server-img" src="assets/images/server.png"/>
+                    <img class="server-img" src="assets/images/icon.png"/>
                     <div class="server-text">
                         <div class="name">Server titre...</div>
                         <div class="desc"><span class="red">Fermé</span> - 0ms</div>
