🐛 Hope it's fixed
Yep another bug

--- a/src/panels/home.html
+++ b/src/panels/home.html
@@ -11,13 +11,39 @@
             </div>
         </div>
     </div>
-    
+    <!-- img src="assets/images/launcher.png" class="superlogo"-->
     <div class="body-home">
         <div class="news-list"></div>
         <div class="info-list">
             <div class="info-item">
                 <div class="server">
-                    <img class="server-img" src="assets/images/icon.png"/>
+                    <img class="server-img" src="assets/images/server.png"/>
+                    <div class="server-text">
+                        <div class="name">Server titre...</div>
+                        <div class="desc"><span class="red">Fermé</span> - 0ms</div>
+                    </div>
+                    <div class="etat-text">
+                        <div class="text">0</div>
+                        <div class="online off"></div>
+                    </div>
+                </div>
+            </div>
+            <div class="info-item padding-10">
+                <div class="card">
+                    <img class="server-img" src="assets/images/discord.png"/>
+                    <div class="server-text">
+                        <div class="name">DISCORD</div>
+                        <div class="desc"><span class="blue">dsc.gg/democraft</span> - 0ms</div>
+                    </div>
+                    <div class="etat-text">
+                        <div class="text">0</div>
+                        <div class="online off"></div>
+                    </div>
+                </div>
+            </div>
+            <div class="info-item padding-10" style="display: none;">
+                <div class="card">
+                    <img class="server-img" src="assets/images/server.png"/>
                     <div class="server-text">
                         <div class="name">Server titre...</div>
                         <div class="desc"><span class="red">Fermé</span> - 0ms</div>
